# ragcun

./: .env.example  .gitignore  .gitmodules  AWS_GPU_SETUP.md  CLAUDE_CODE_AWS.md  CLEANUP_SUMMARY.md  GETTING_STARTED.md  LICENSE  QUICKSTART_PUBLICATION.md  README.md  REORGANIZATION_SUMMARY.md  RESULTS_ORGANIZATION.md  SCRIPT_ORGANIZATION.md  STATUS.md  SUBMODULE.md  TRAINING_DECISION.md  TRAINING_GUIDE.md  TRAINING_READINESS_FIXES.md  UV_GUIDE.md  WORKFLOW.md  pyproject.toml  quickstart.sh  requirements.txt  setup.py
.github/workflows/: README.md  test.yml
analysis/: ARCHITECTURE_SUMMARY.md  asymmetric_failure_analysis.md  respred_failure_analysis.md
archive/: INDEX.txt  QUICK_REFERENCE.md  README.md
archive/logs/: README.md
archive/scripts/: wait_and_restart_from_checkpoint.sh
archive/top_level/: README.md
config/: __init__.py  config.example.env  train_example.json
data/: README.md
data/embeddings/: README.md
data/processed/: README.md
data/raw/: README.md  all_docs.txt  sample_docs.txt  science_docs.txt  tech_docs.txt
docs/: API.md  AWS_SETUP.md  AWS_SPOT_TRAINING_GUIDE.md  CLAUDE_CODE_AWS.md  DATA_GUIDE.md  DATA_SUMMARY.md  DIRECTORY_GUIDE.md  HYPERPARAMETER_GUIDE.md  JEPA_ARCHITECTURE_ANALYSIS.md  JEPA_EMBEDDING_NETWORK_RAG.md  LEJEPA_IMPLEMENTATION_COMPARISON.md  LIST_SCRIPTS.sh  MOST_PROMISING_HYPERPARAMS.md  MPNET_LEJEPA_ARCHITECTURE.md  PUBLICATION_QUICKSTART.md  PUBLICATION_TRAINING_GUIDE.md  PUBLICATION_TRAINING_IMPLEMENTATION.md  README.md  RECOMMENDED_TRAINING_PATH.md  REFERENCES.md  RUN_ME_FIRST.txt  TRAINING_GUIDE.md  VALIDATION_STRATEGY.md
docs/archive/: AWS_GPU_SETUP.md  AWS_QUICKSTART.md  AWS_SPOT_TRAINING_GUIDE.md  CLEANUP_SUMMARY.md  DATA_SUMMARY.md  DIRECTORY_GUIDE.md  GETTING_STARTED.md  GPU_vs_TPU.md  HOW_TO_DATA_PREP.md  P4D_TRAINING_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PRE_FLIGHT_TEST_PLAN.md  PUBLICATION_QUICKSTART.md  PUBLICATION_TRAINING_GUIDE.md  PUBLICATION_TRAINING_IMPLEMENTATION.md  QUICKSTART.md  QUICKSTART_PUBLICATION.md  QUICK_START.md  QUICK_TRAINING_START.md  RECOMMENDED_TRAINING_PATH.md  SCRIPTS_README.md  START_HERE.md  SUBMODULE.md  TRAINING_DECISION.md  TRAINING_READINESS_FIXES.md  (+2 more)
examples/: basic_example.py  retrieval_example.py
notebooks/: README.md  colab_quickstart.ipynb  document_processing.ipynb  evaluate_isotropy.ipynb  evaluate_rag.ipynb  lejepa_training.ipynb
ragcun/: __init__.py  asymmetric_model.py  asymmetric_predictor_model.py  lejepa_loss.py  model.py  mpnet_lejepa.py  respred_model.py  retriever.py
scripts/: 1_prepare_data_quick.sh  2_train_quick.sh  4_prepare_data_full.sh  5_train_full.sh  98_pipeline_full.sh  99_pipeline_quick.sh  README.md  check_training_status.sh  compare_jepa_models.py  compare_lejepa_implementations.py  create_xy_masked_dataset.py  diagnostic_quick.py  download_wiki.py  eval_all_5_epochs.sh  eval_asymmetric_quick.py  eval_beir_jepa_10k_epoch2.sh  eval_beir_jepa_10k_epoch3.sh  eval_beir_jepa_pure_epoch2.sh  eval_beir_jepa_pure_epoch3.sh  eval_frozen_msmarco_full.py  eval_msmarco_full.py  eval_residual_gaussian_epoch1.sh  eval_respred_epoch1.sh  eval_respred_quick.py  eval_vanilla_baseline.py  evaluate.py  evaluate_beir.py  finetune_supervised.sh  generate_training_data.sh  prepare_data.py  run_preflight_tests.sh  scheduled_eval_asymmetric.sh  scheduled_eval_asymmetric_dual.sh  setup_p4d_instance.sh  test_training_setup.sh  train.py  train_5epochs.sh  train_and_eval_incremental.sh  train_and_eval_parallel.sh  train_asymmetric.py  (+15 more)
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  test_beir_evaluation.py  test_data_preparation.py  test_download_scripts.py  test_evaluation.py  test_integration.py  test_model.py  test_model_smart_hybrid.py  test_properties.py  test_retriever.py
(+125 files in other folders)
